# breeding-agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  setup.cfg
.codex/: config.toml
.codex/agents/: architect.toml  hpc_scheduler.toml  llm_orchestrator.toml  orchestrator.toml  popgen_quantgen.toml  safety_fuse.toml  test_eval.toml
.codex/environments/: environment.toml  setup_windows.ps1
docs/: HANDOFF.md  README.md  genomic_agent_architecture_summary.md  v1_5_system_map.md
references/: INDEX.md
references/evaluation/: README.md
references/failure_cases/: README.md
references/input_specs/: README.md  dataset-bundle-template.md
references/modeling_guides/: README.md
references/ontology/: README.md  knowledge_item.v2.md
references/papers/: README.md  genomic_prediction_core_papers_v1.md  grm_core_papers_v1.md  pca_core_papers_v1.md  qc_core_papers_v1.md
references/parameter_playbooks/: README.md
references/qc_rules/: README.md
references/report_templates/: README.md  genomic-prediction-template.md  qc-report-template.md  structure-summary-template.md
references/sop/: README.md  genomic_prediction_stage_sop_v1.md  grm_builder_stage_sop_v1.md  grobid_pdf_ingestion_sop.md  pca_pipeline_stage_sop_v1.md  qc_pipeline_stage_sop_v1.md
references/structure_analysis/: README.md
scripts/: INDEX.md
scripts/genomic_prediction/: README.md  run_genomic_prediction.sh
scripts/grm_builder/: README.md  run_grm_builder.sh
scripts/pca_pipeline/: README.md  run_pca_pipeline.sh
scripts/qc_pipeline/: README.md  (+1 more)
tests/: conftest.py
(+123 files in other folders)
